--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "dotenv": "^16.3.1",
+    "eslint": "^8.53.0",
     "express": "^4.17.1",
     "ioredis": "^5.3.2",
     "redis": "^4.0.0"
